# vsc_unittest

./: CMakeLists.txt  MyClass.cpp  MyClass.h  MyClass2.cpp  MyClass2.h  README.md  TestMyClass.cpp  TestMyClass2.cpp  main.cpp
